# symlink-center

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
app-data/: .gitignore  config-location.toml
app-data/auto-test/: links.toml
app-data/default/: links.toml
data/auto-test/: links.toml
data/default/: exported-mklink.md  links.toml
docs/: ai.md  api.md  architecture.md  changelog.md  engineering.md  operations.md  ownership.md  product.md
docs/ai/evals/: doc-freshness.md
docs/ai/prompts/: adr-writer.md  doc-audit.md
docs/architecture/: config.md  security.md
docs/architecture/adr/: 0001-record-architecture-decisions.md
docs/engineering/: code-locator.md  repo-map.md
docs/product/: frontend-ux.md
src/: App.tsx  constants.ts  link-tree.test.ts  link-tree.ts  styles.css  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ui.tsx
tools/: mklink-by-Mapping-Root.bat  run-auto-test.ps1
tools/old-files-before-this-app/mklink-bat/: .gitignore  README-mklink.md
