[package]
name = "symlink_management_and_config_decoupling"
version = "0.1.1"
description = "Desktop manager for backed-up settings and Windows symbolic links"
authors = ["symlink-management-and-config-decoupling"]
edition = "2021"

[lib]
name = "symlink_management_and_config_decoupling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
